force-app/main/default/objects/X5S__c/X5S__c.object-meta.xml
<CustomObject>
    <label>Auditoria</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Nome de 5S</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>auditoria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>