force-app/main/default/objects/X5S__c/fields/Ambiente__c.field-meta.xml
<CustomField>
    <fullName>Ambiente__c</fullName>
    <description>O local de trabalho está com a luminosidade adequada?</description>
    <inlineHelpText>O local de trabalho está com a luminosidade adequada?</inlineHelpText>
    <label>Luminosidade adequada no ambiente?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>