force-app/main/default/objects/X5S__c/fields/area_veicular__c.field-meta.xml
<CustomField>
    <fullName>area_veicular__c</fullName>
    <label>Área</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASSISTÊNCIA TÉCNICA</fullName>
            </value>
            <value>
                <fullName>LOGISTICA</fullName>
            </value>
            <value>
                <fullName>COMERCIAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>