force-app/main/default/objects/X5S__c/fields/Auditado__c.field-meta.xml
<CustomField>
    <fullName>Auditado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auditado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.CNPJ__c</field>
            <operation>contains</operation>
            <value>05.743.288/0001-08</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>X5S</relationshipName>
    <type>Lookup</type>
</CustomField>