force-app/main/default/objects/X5S__c/fields/Auditor__c.field-meta.xml
<CustomField>
    <fullName>Auditor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Auditor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Essa pessoa não está na lista de colaboradores do grupo Hospcom</errorMessage>
        <filterItems>
            <field>Contact.Account.CNPJ__c</field>
            <operation>contains</operation>
            <value>05.743.288/0001-08</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipName>X5S1</relationshipName>
    <type>Lookup</type>
</CustomField>