force-app/main/default/objects/X5S__c/fields/Controle_Visual2__c.field-meta.xml
<CustomField>
    <fullName>Controle_Visual2__c</fullName>
    <description>O aspecto visual da seção demonstra ser agradável?</description>
    <inlineHelpText>O aspecto visual da seção demonstra ser agradável?</inlineHelpText>
    <label>O aspecto  visual da seção é agradável?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>