force-app/main/default/objects/X5S__c/fields/Controle_Visual__c.field-meta.xml
<CustomField>
    <fullName>Controle_Visual__c</fullName>
    <description>O acesso a itens utilizados todos os dias estão
adequados?</description>
    <inlineHelpText>O acesso a itens utilizados todos os dias estão
adequados?</inlineHelpText>
    <label>Acesso a itens diários é adequado?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>