force-app/main/default/objects/X5S__c/fields/Defesa_Recurso_check__c.field-meta.xml
<CustomField>
    <fullName>Defesa_Recurso_check__c</fullName>
    <formula>LastModifiedById !=  Owner:User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defesa/Recurso check</label>
    <type>Checkbox</type>
</CustomField>