force-app/main/default/objects/X5S__c/fields/Disciplina2__c.field-meta.xml
<CustomField>
    <fullName>Disciplina2__c</fullName>
    <description>O colaborador costuma seguir a orientação de melhoria
da avaliação anterior?</description>
    <inlineHelpText>O colaborador costuma seguir a orientação de melhoria
da avaliação anterior?</inlineHelpText>
    <label>Colaborador segue as dicas de melhoria?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>