force-app/main/default/objects/X5S__c/fields/Disciplina__c.field-meta.xml
<CustomField>
    <fullName>Disciplina__c</fullName>
    <description>O colaborador demostra disciplina quanto as normas e
procedimentos?</description>
    <inlineHelpText>O colaborador demostra disciplina quanto as normas e
procedimentos?</inlineHelpText>
    <label>Colaborador segue normas e procedimento?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>