force-app/main/default/objects/X5S__c/fields/Existem_multas_no_ve_culo__c.field-meta.xml
<CustomField>
    <fullName>Existem_multas_no_ve_culo__c</fullName>
    <label>Existem multas no veículo?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>NC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>