force-app/main/default/objects/X5S__c/fields/Limpeza3__c.field-meta.xml
<CustomField>
    <fullName>Limpeza3__c</fullName>
    <description>As gavetas estão limpas?</description>
    <inlineHelpText>As gavetas estão limpas?</inlineHelpText>
    <label>As gavetas estão limpas?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>