force-app/main/default/objects/X5S__c/fields/Limpeza4__c.field-meta.xml
<CustomField>
    <fullName>Limpeza4__c</fullName>
    <description>Ferramentas/Notebook/Carro da empresa limpos?</description>
    <inlineHelpText>Ferramentas/Notebook/Carro da empresa limpos?</inlineHelpText>
    <label>Instrumentos de trabalho estão limpos?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>