force-app/main/default/objects/X5S__c/fields/Limpeza__c.field-meta.xml
<CustomField>
    <fullName>Limpeza__c</fullName>
    <description>A área de trabalho se encontra devidamente limpa?</description>
    <inlineHelpText>A área de trabalho se encontra devidamente limpa?</inlineHelpText>
    <label>A área de trabalho está limpa?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>