force-app/main/default/objects/X5S__c/fields/Materiais_ou_partes__c.field-meta.xml
<CustomField>
    <fullName>Materiais_ou_partes__c</fullName>
    <description>Os materiais na area de trabalho são somente os
necessários para execução do trabalho?</description>
    <inlineHelpText>Os materiais na area de trabalho são somente os
necessários para execução do trabalho?</inlineHelpText>
    <label>Hà apenas itens necessários no ambiente?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>