force-app/main/default/objects/X5S__c/fields/Memorandos_de_Melhoria__c.field-meta.xml
<CustomField>
    <fullName>Memorandos_de_Melhoria__c</fullName>
    <description>O Colaborador está devidamente uniformizado ou trajado
conforme os padrões da empresa?</description>
    <inlineHelpText>O Colaborador está devidamente uniformizado ou trajado
conforme os padrões da empresa?</inlineHelpText>
    <label>Colaborador com uniforme adequado?&quot;</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>