force-app/main/default/objects/X5S__c/fields/Mes__c.field-meta.xml
<CustomField>
    <fullName>Mes__c</fullName>
    <formula>MONTH( Data__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mês</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>