force-app/main/default/objects/X5S__c/fields/O_IPVA_est_em_dias__c.field-meta.xml
<CustomField>
    <fullName>O_IPVA_est_em_dias__c</fullName>
    <label>O IPVA está em dias?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>NC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>