force-app/main/default/objects/X5S__c/fields/Organiza_o2__c.field-meta.xml
<CustomField>
    <fullName>Organiza_o2__c</fullName>
    <description>Existem fios soltos, cabos fora do local onde deveriam
estar?</description>
    <inlineHelpText>Existem fios soltos, cabos fora do local onde deveriam
estar?</inlineHelpText>
    <label>Há fios soltos, cabos fora do lugar?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>