force-app/main/default/objects/X5S__c/fields/Padr_o2__c.field-meta.xml
<CustomField>
    <fullName>Padr_o2__c</fullName>
    <description>Gavetas estão divididas(profissional e pessoal)?</description>
    <inlineHelpText>Gavetas estão divididas(profissional e pessoal)?</inlineHelpText>
    <label>Gavetas divididas(profissional/pessoal)?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>