force-app/main/default/objects/X5S__c/fields/Padr_o__c.field-meta.xml
<CustomField>
    <fullName>Padr_o__c</fullName>
    <description>O colaborador está identificado c/ crachá?</description>
    <inlineHelpText>O colaborador está identificado c/ crachá?</inlineHelpText>
    <label>Colaborador está identificado c/ crachá?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>