force-app/main/default/objects/X5S__c/fields/Plano_de_Melhoria__c.field-meta.xml
<CustomField>
    <fullName>Plano_de_Melhoria__c</fullName>
    <description>No geral o colaborador segue os padrões conforme regras
e normas do departamento?</description>
    <inlineHelpText>No geral o colaborador segue os padrões conforme regras
e normas do departamento?</inlineHelpText>
    <label>Colaborador segue sugestôes de melhoria?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>