force-app/main/default/objects/X5S__c/fields/Pontua_o_geral__c.field-meta.xml
<CustomField>
    <fullName>Pontua_o_geral__c</fullName>
    <formula>VALUE(TEXT(Ambiente__c)) + 
VALUE(TEXT(Ambiente2__c	))+ 
VALUE(TEXT(Conserva_o__c))+ 
VALUE(TEXT(Controle_Virtual__c))+ 
VALUE(TEXT(Controle_Visual__c))+ 
VALUE(TEXT(Controle_Visual2__c))+ 
VALUE(TEXT(Disciplina__c))+ 
VALUE(TEXT(Disciplina2__c))+ 
VALUE(TEXT(Indicadores_de_Localiza_o__c))+ 
VALUE(TEXT(Itens_avulsos__c))+ 
VALUE(TEXT(Itens_Indicadores__c))+ 
VALUE(TEXT(Limpeza__c))+ 
VALUE(TEXT(Limpeza2__c))+ 
VALUE(TEXT(Limpeza3__c))+ 
VALUE(TEXT(Limpeza4__c))+ 
VALUE(TEXT(Materiais_ou_partes__c))+ 
VALUE(TEXT(Memorandos_de_Melhoria__c))+ 
VALUE(TEXT(Padr_o2__c))+ 
VALUE(TEXT(Organiza_o2__c))+ 
VALUE(TEXT(Organiza_o3__c))+ 
VALUE(TEXT(Organiza_o__c))+ 
VALUE(TEXT(Padr_o__c))+ 
VALUE(TEXT(Plano_de_Melhoria__c))+ 
VALUE(TEXT(Procedimentos__c))+ 
VALUE(TEXT(Procedimentos_Importantes__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pontuação geral</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>