force-app/main/default/objects/X5S__c/fields/Pontuacao_geral_veicular__c.field-meta.xml
<CustomField>
    <fullName>Pontuacao_geral_veicular__c</fullName>
    <formula>(
  (
    IF(TEXT(x1__c) != null, VALUE(TEXT(x1__c)), 0) +
    IF(TEXT(X2__c) != null, VALUE(TEXT(X2__c)), 0) +
    IF(TEXT(X3__c) != null, VALUE(TEXT(X3__c)), 0) +
    IF(TEXT(X4__c) != null, VALUE(TEXT(X4__c)), 0) +
    IF(TEXT(X5__c) != null, VALUE(TEXT(X5__c)), 0) +
    IF(TEXT(X6__c) != null, VALUE(TEXT(X6__c)), 0) +
    IF(TEXT(X7__c) != null, VALUE(TEXT(X7__c)), 0) +
    IF(TEXT(X8__c) != null, VALUE(TEXT(X8__c)), 0) +
    IF(TEXT(X9__c) != null, VALUE(TEXT(X9__c)), 0) +
    IF(TEXT(X10__c) != null, VALUE(TEXT(X10__c)), 0) +
    IF(TEXT(X11__c) != null, VALUE(TEXT(X11__c)), 0) +
    IF(TEXT(X12__c) != null, VALUE(TEXT(X12__c)), 0) +
    IF(TEXT(X13__c) != null, VALUE(TEXT(X13__c)), 0) +
    IF(TEXT(X14__c) != null, VALUE(TEXT(X14__c)), 0) +
    IF(TEXT(X15__c) != null, VALUE(TEXT(X15__c)), 0) +
    IF(TEXT(X16__c) != null, VALUE(TEXT(X16__c)), 0) +
    IF(TEXT(X17__c) != null, VALUE(TEXT(X17__c)), 0) +
    IF(TEXT(X18__c) != null, VALUE(TEXT(X18__c)), 0) -

    /* Subtrai 1 apenas se for &quot;NC&quot; */
    IF(TEXT(O_IPVA_est_em_dias__c) = &quot;NC&quot;, 1, 0) -
    IF(TEXT(Existem_multas_no_ve_culo__c) = &quot;NC&quot;, 1, 0)
  ) / 90
) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pontuação geral</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>