force-app/main/default/objects/X5S__c/fields/Procedimentos__c.field-meta.xml
<CustomField>
    <fullName>Procedimentos__c</fullName>
    <description>O colaborador entende e segue as normas do 5S ou
somente executa no dia da auditoria?</description>
    <inlineHelpText>O colaborador entende e segue as normas do 5S ou
somente executa no dia da auditoria?</inlineHelpText>
    <label>Colaborador segue normas 5S diariamente?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>