force-app/main/default/objects/X5S__c/fields/Procedimentos_Importantes__c.field-meta.xml
<CustomField>
    <fullName>Procedimentos_Importantes__c</fullName>
    <description>Objetos pessoais alocados em local apropriado?</description>
    <inlineHelpText>Objetos pessoais alocados em local apropriado?</inlineHelpText>
    <label>Objetos pessoais em local adequado?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>