force-app/main/default/objects/X5S__c/fields/Sugest_o_de_melhoria__c.field-meta.xml
<CustomField>
    <fullName>Sugest_o_de_melhoria__c</fullName>
    <label>Resposta Qualidade</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>