force-app/main/default/objects/X5S__c/fields/Veiculo__c.field-meta.xml
<CustomField>
    <fullName>Veiculo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Veículo</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset.Categoria_Patrimonial__c</field>
            <operation>equals</operation>
            <value>VEÍCULOS</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipName>auditoria</relationshipName>
    <type>Lookup</type>
</CustomField>