force-app/main/default/objects/X5S__c/fields/X11__c.field-meta.xml
<CustomField>
    <fullName>X11__c</fullName>
    <description>Setas de sinalização estão funcionando?</description>
    <inlineHelpText>Setas de sinalização estão funcionando?</inlineHelpText>
    <label>11.Setas de sinalização estão funcio...?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>