force-app/main/default/objects/X5S__c/fields/X13__c.field-meta.xml
<CustomField>
    <fullName>X13__c</fullName>
    <description>Etiqueta de Manutenção interna está atualizada?</description>
    <inlineHelpText>Etiqueta de Manutenção interna está atualizada?</inlineHelpText>
    <label>13.Etiqueta de Manutenção interna e...?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>