force-app/main/default/objects/X5S__c/fields/X14__c.field-meta.xml
<CustomField>
    <fullName>X14__c</fullName>
    <description>CRLV está disponível no SF?</description>
    <inlineHelpText>CRLV está disponível no SF?</inlineHelpText>
    <label>14.CRLV está disponível no SF?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>