force-app/main/default/objects/X5S__c/recordTypes/Auditoria_5S.recordType-meta.xml
<RecordType>
    <fullName>Auditoria_5S</fullName>
    <active>true</active>
    <label>Auditoria 5S</label>
</RecordType>