force-app/main/default/objects/X5S__c/recordTypes/Auditoria_Veicular.recordType-meta.xml
<RecordType>
    <fullName>Auditoria_Veicular</fullName>
    <active>true</active>
    <label>Auditoria Veicular</label>
</RecordType>