force-app/main/default/objects/X5S__c/validationRules/auditado.validationRule-meta.xml
<ValidationRule>
    <fullName>auditado</fullName>
    <active>true</active>
    <errorConditionFormula>(
ISCHANGED( Procedimentos__c )  || 
ISCHANGED(Conserva_o__c ) ||
ISCHANGED( Disciplina__c) ||
ISCHANGED( Disciplina2__c) ||
ISCHANGED( Departamento__c	) ||
ISCHANGED( Data__c) ||
ISCHANGED( Empresa__c) ||
ISCHANGED( Indicadores_de_Localiza_o__c) ||
ISCHANGED( Itens_avulsos__c) ||
ISCHANGED( Itens_Indicadores__c	) ||
ISCHANGED( Limpeza2__c) ||
ISCHANGED( Limpeza3__c) ||
ISCHANGED( Limpeza4__c) ||
ISCHANGED( Limpeza__c) ||
ISCHANGED(Materiais_ou_partes__c)  || 
ISCHANGED(Memorandos_de_Melhoria__c)  || 
ISCHANGED(Mes__c)  || 
ISCHANGED(Observa_es__c)  || 
ISCHANGED(Organiza_o2__c)  || 
ISCHANGED(Organiza_o3__c)  || 
ISCHANGED(Organiza_o__c	)  || 
ISCHANGED(Padr_o2__c)  || 
ISCHANGED(Padr_o__c)  || 
ISCHANGED(Plano_de_Melhoria__c)  || 
ISCHANGED(Pontua_o_geral__c)  ||
ISCHANGED(Procedimentos__c)  ||
ISCHANGED(Procedimentos_Importantes__c)  ||
ISCHANGED(Quantidade_de_leitos__c) 
 )&amp;&amp;
$User.ContactId ==  Auditado__c</errorConditionFormula>
    <errorMessage>Você não pode editar a avaliação</errorMessage>
</ValidationRule>