force-app/main/default/objects/X5S__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Auditor__c</columns>
    <columns>Auditado__c</columns>
    <columns>Departamento__c</columns>
    <columns>Pontua_o_geral__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Empresa__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>