force-app/main/default/objects/X5S__c/listViews/Veicular.listView-meta.xml
<ListView>
    <fullName>Veicular</fullName>
    <columns>NAME</columns>
    <columns>Auditor__c</columns>
    <columns>Auditado__c</columns>
    <columns>Departamento__c</columns>
    <columns>Pontuacao_geral_veicular__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Empresa__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>X5S__c.Auditoria_Veicular</value>
    </filters>
    <label>Veicular</label>
</ListView>